# AI-job-recommender-LangChain-and-Gemini-model

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: helper.py  job_api.py  llm_gemini.py
